--- a/etd_segmentation/src/augmentation/ack_text_img_aug.ipynb
+++ b/etd_segmentation/src/augmentation/ack_text_img_aug.ipynb
@@ -16,9 +16,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-04 13:57:57.384467: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
+      "2023-07-13 14:29:06.686121: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-04 13:57:57.666054: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "2023-07-13 14:29:08.845745: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     }
    ],
@@ -53,9 +53,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-04 13:58:00.542177: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
+      "2023-07-13 15:07:32.536655: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-04 13:58:01.325504: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /device:GPU:0 with 11523 MB memory:  -> device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:1d:00.0, compute capability: 7.0\n"
+      "2023-07-13 15:07:36.300437: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /device:GPU:0 with 11523 MB memory:  -> device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:1a:00.0, compute capability: 7.0\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,17 +137,17 @@
     "        \n",
     "        img_augmentation = iaa.Sequential([\n",
     "            #iaa.Affine(rotate=(-6, 6)),\n",
-    "            #iaa.AdditiveGaussianNoise(scale=(10, 50)),\n",
-    "            iaa.SaltAndPepper(p=0.01),\n",
-    "            #iaa.GaussianBlur(sigma=0.5),\n",
-    "            #iaa.LinearContrast(alpha=1),\n",
+    "            #iaa.AdditiveGaussianNoise(scale=(10, 50)), #used\n",
+    "            #iaa.SaltAndPepper(p=0.01), #used\n",
+    "            #iaa.GaussianBlur(sigma=0.5), #used\n",
+    "            #iaa.LinearContrast(alpha=1),#used\n",
     "            #iaa.PerspectiveTransform(scale=0.025, keep_size=True)\n",
     "        ], random_order = True)\n",
     "        \n",
     "        \n",
     "        for n, images in tqdm(enumerate(self.img_files[0:]),desc = 'Processing augmented text images'):\n",
     "            aug_image = img_augmentation(image=cv2.imread(images))\n",
-    "            cv2.imwrite('./Label-Acknowledgement/501/aug{}.png'.format(n),aug_image)\n",
+    "            cv2.imwrite('./Label-Acknowledgement/515/aug{}.png'.format(n),aug_image)\n",
     "        \n",
     "        # lower = 0\n",
     "        # upper = 1000\n",
@@ -160,24 +160,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing list of phrases: 100%|██████████| 543/543 [30:54<00:00,  3.42s/it]\n",
-      "Processing list of ack: 100%|██████████| 543/543 [00:00<00:00, 3939.60it/s]\n",
+      "Processing list of phrases: 100%|██████████| 543/543 [30:33<00:00,  3.38s/it]\n",
+      "Processing list of ack: 100%|██████████| 543/543 [00:00<00:00, 3964.96it/s]\n",
       "Processing augmented images: 543it [04:59,  1.81it/s]\n",
-      "Processing augmented text images: 543it [04:30,  2.01it/s]"
+      "Processing augmented text images: 543it [01:56,  4.65it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training on GPU took: 40.50557028849919 minutes\n"
+      "Generating took: 37.600044127305345 minutes\n"
      ]
     },
     {
@@ -209,7 +209,7 @@
     "\n",
     "        ack_ = acknowledgement_text.list_of_ack(ack)\n",
     "        df = pd.DataFrame(ack_, columns = ['text'])\n",
-    "        df.to_csv('./Label-Acknowledgement/acknowledgement.csv', encoding = 'utf-8', index= None)\n",
+    "        df.to_csv('./Label-Acknowledgement/acknowledgement-v3.csv', encoding = 'utf-8', index= None)\n",
     "\n",
     "\n",
     "        ack_text_aug = acknowledgement_text.ack_aug(ack_)\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
     "import os\n",
     "\n",
     "# folder path\n",
-    "dir_path = './Label-Acknowledgement/501'\n",
+    "dir_path = './Label-Acknowledgement/515'\n",
     "count = 0\n",
     "# Iterate directory\n",
     "for path in os.listdir(dir_path):\n",
@@ -251,19 +251,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "parser = Preprocessor()\n",
-    "image_path = sorted(glob.glob('/home/mchou001/Label-Acknowledgement/501/*.png'), key = parser.numericalSort)\n",
+    "image_path = sorted(glob.glob('/home/mchou001/Label-Acknowledgement/515/*.png'), key = parser.numericalSort)\n",
     "df = pd.DataFrame(image_path, columns = ['img_path'])\n",
-    "df.to_csv('./Label-Acknowledgement/ack_img_aug.csv', encoding = 'utf-8', index= None)"
+    "df.to_csv('./Label-Acknowledgement/ack_img_aug-v3.csv', encoding = 'utf-8', index= None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -293,23 +293,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug0.png</td>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug0.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug1.png</td>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug1.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug2.png</td>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug2.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug3.png</td>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug3.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug4.png</td>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug4.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -317,23 +317,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>538</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug53...</td>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug53...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>539</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug53...</td>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug53...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>540</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug54...</td>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug54...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>541</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug54...</td>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug54...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>542</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug54...</td>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug54...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -342,35 +342,35 @@
       ],
       "text/plain": [
        "                                              img_path\n",
-       "0    /home/mchou001/Label-Acknowledgement/501/aug0.png\n",
-       "1    /home/mchou001/Label-Acknowledgement/501/aug1.png\n",
-       "2    /home/mchou001/Label-Acknowledgement/501/aug2.png\n",
-       "3    /home/mchou001/Label-Acknowledgement/501/aug3.png\n",
-       "4    /home/mchou001/Label-Acknowledgement/501/aug4.png\n",
+       "0    /home/mchou001/Label-Acknowledgement/515/aug0.png\n",
+       "1    /home/mchou001/Label-Acknowledgement/515/aug1.png\n",
+       "2    /home/mchou001/Label-Acknowledgement/515/aug2.png\n",
+       "3    /home/mchou001/Label-Acknowledgement/515/aug3.png\n",
+       "4    /home/mchou001/Label-Acknowledgement/515/aug4.png\n",
        "..                                                 ...\n",
-       "538  /home/mchou001/Label-Acknowledgement/501/aug53...\n",
-       "539  /home/mchou001/Label-Acknowledgement/501/aug53...\n",
-       "540  /home/mchou001/Label-Acknowledgement/501/aug54...\n",
-       "541  /home/mchou001/Label-Acknowledgement/501/aug54...\n",
-       "542  /home/mchou001/Label-Acknowledgement/501/aug54...\n",
+       "538  /home/mchou001/Label-Acknowledgement/515/aug53...\n",
+       "539  /home/mchou001/Label-Acknowledgement/515/aug53...\n",
+       "540  /home/mchou001/Label-Acknowledgement/515/aug54...\n",
+       "541  /home/mchou001/Label-Acknowledgement/515/aug54...\n",
+       "542  /home/mchou001/Label-Acknowledgement/515/aug54...\n",
        "\n",
        "[543 rows x 1 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1 = pd.read_csv('./Label-Acknowledgement/ack_img_aug.csv')\n",
-    "df2 = pd.read_csv('./Label-Acknowledgement/acknowledgement.csv')\n",
+    "df1 = pd.read_csv('./Label-Acknowledgement/ack_img_aug-v3.csv')\n",
+    "df2 = pd.read_csv('./Label-Acknowledgement/acknowledgement-v3.csv')\n",
     "df1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "[543 rows x 2 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,19 +486,161 @@
     "df4 = pd.DataFrame(df3, columns = ['text'])\n",
     "df4['class'] = np.nan\n",
     "df4 = df4.fillna(\"Label-Acknowledgement\")\n",
-    "df4.to_csv('./Label-Acknowledgement/updated_ack.csv', encoding = 'utf-8', index= None)\n",
+    "df4.to_csv('./Label-Acknowledgement/updated_ack-v3.csv', encoding = 'utf-8', index= None)\n",
     "df4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df5 = pd.read_csv('./Label-Acknowledgement/updated_ack.csv')\n",
+    "df5 = pd.read_csv('./Label-Acknowledgement/updated_ack-v3.csv')\n",
     "df6 = pd.concat([df1, df4], axis = 1)\n",
-    "df6.to_csv('./Label-Acknowledgement/ack.csv', encoding = 'utf-8', index= None)"
+    "df6.to_csv('./Label-Acknowledgement/ack-v3.csv', encoding = 'utf-8', index= None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>img_path</th>\n",
+       "      <th>text</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug0.png</td>\n",
+       "      <td>ACKNOWLEDGEMENTS\\nDr. C.R. Bell gave me valuab...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug1.png</td>\n",
+       "      <td>ACKNOWLEDGEMENTS\\nThe author would like to exp...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug2.png</td>\n",
+       "      <td>ACKNOWLEDGEMENTS\\nThe author thanks Professor ...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug3.png</td>\n",
+       "      <td>ACKNOWLEDGEMENTS\\n3. The research was sponsore...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug4.png</td>\n",
+       "      <td>ACKNOWLEDGEMENTS\\nI am indebted to Professor H...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>538</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug53...</td>\n",
+       "      <td>ACKNOWLEDGEMENTS\\nThe author would like to tha...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>539</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug53...</td>\n",
+       "      <td>ACKNOWLEDGEMENTS\\nThe author would like to tha...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>540</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug54...</td>\n",
+       "      <td>ACKNOWLEDGEMENTS\\nACKNOWLEDGEMENTS The author ...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug54...</td>\n",
+       "      <td>ACKNOWLEDGEMENTS\\nThe author wishes to thank h...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>542</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/515/aug54...</td>\n",
+       "      <td>ACKNOWLEDGEMENTS\\nThe writer is indebted to ev...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>543 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              img_path  \\\n",
+       "0    /home/mchou001/Label-Acknowledgement/515/aug0.png   \n",
+       "1    /home/mchou001/Label-Acknowledgement/515/aug1.png   \n",
+       "2    /home/mchou001/Label-Acknowledgement/515/aug2.png   \n",
+       "3    /home/mchou001/Label-Acknowledgement/515/aug3.png   \n",
+       "4    /home/mchou001/Label-Acknowledgement/515/aug4.png   \n",
+       "..                                                 ...   \n",
+       "538  /home/mchou001/Label-Acknowledgement/515/aug53...   \n",
+       "539  /home/mchou001/Label-Acknowledgement/515/aug53...   \n",
+       "540  /home/mchou001/Label-Acknowledgement/515/aug54...   \n",
+       "541  /home/mchou001/Label-Acknowledgement/515/aug54...   \n",
+       "542  /home/mchou001/Label-Acknowledgement/515/aug54...   \n",
+       "\n",
+       "                                                  text                  class  \n",
+       "0    ACKNOWLEDGEMENTS\\nDr. C.R. Bell gave me valuab...  Label-Acknowledgement  \n",
+       "1    ACKNOWLEDGEMENTS\\nThe author would like to exp...  Label-Acknowledgement  \n",
+       "2    ACKNOWLEDGEMENTS\\nThe author thanks Professor ...  Label-Acknowledgement  \n",
+       "3    ACKNOWLEDGEMENTS\\n3. The research was sponsore...  Label-Acknowledgement  \n",
+       "4    ACKNOWLEDGEMENTS\\nI am indebted to Professor H...  Label-Acknowledgement  \n",
+       "..                                                 ...                    ...  \n",
+       "538  ACKNOWLEDGEMENTS\\nThe author would like to tha...  Label-Acknowledgement  \n",
+       "539  ACKNOWLEDGEMENTS\\nThe author would like to tha...  Label-Acknowledgement  \n",
+       "540  ACKNOWLEDGEMENTS\\nACKNOWLEDGEMENTS The author ...  Label-Acknowledgement  \n",
+       "541  ACKNOWLEDGEMENTS\\nThe author wishes to thank h...  Label-Acknowledgement  \n",
+       "542  ACKNOWLEDGEMENTS\\nThe writer is indebted to ev...  Label-Acknowledgement  \n",
+       "\n",
+       "[543 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df6"
    ]
   },
   {
