--- a/etd_segmentation/src/augmentation/chabs_text_img_aug.ipynb
+++ b/etd_segmentation/src/augmentation/chabs_text_img_aug.ipynb
@@ -9,9 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-19 11:58:22.605754: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-07-19 11:58:24.862781: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+     ]
+    }
+   ],
    "source": [
     "## importing the modules from ETDAugmentation script\n",
     "from ipynb.fs.full.ETDaugmentation import *\n",
@@ -29,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +53,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-05 01:50:45.635867: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /device:GPU:0 with 11523 MB memory:  -> device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:1d:00.0, compute capability: 7.0\n"
+      "2023-07-19 12:07:57.872044: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-07-19 12:08:01.275138: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /device:GPU:0 with 11523 MB memory:  -> device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:1a:00.0, compute capability: 7.0\n"
      ]
     }
    ],
@@ -56,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,16 +139,16 @@
     "        \n",
     "        img_augmentation = iaa.Sequential([\n",
     "            #iaa.Affine(rotate=(-6, 6)),\n",
-    "            #iaa.AdditiveGaussianNoise(scale=(10, 50)),\n",
-    "            iaa.SaltAndPepper(p=0.01),\n",
-    "            #iaa.GaussianBlur(sigma=0.5),\n",
-    "            #iaa.LinearContrast(alpha=1),\n",
+    "            #iaa.AdditiveGaussianNoise(scale=(10, 50)), #used \n",
+    "            #iaa.SaltAndPepper(p=0.01), #used\n",
+    "            #iaa.GaussianBlur(sigma=0.5),#used\n",
+    "            iaa.LinearContrast(alpha=1),\n",
     "            #iaa.PerspectiveTransform(scale=0.025, keep_size=True)\n",
     "        ], random_order = True)\n",
     "        \n",
     "        for n, images in tqdm(enumerate(self.img_files[0:]), desc = 'Processing augmented text to images'):\n",
     "            aug_image = img_augmentation(image=cv2.imread(images))\n",
-    "            cv2.imwrite('./Label-ChapterAbstract/504/aug{}.png'.format(n),aug_image)\n",
+    "            cv2.imwrite('./Label-ChapterAbstract/519/aug{}.png'.format(n),aug_image)\n",
     "        \n",
     "        # lower = 0\n",
     "        # upper = 1000\n",
@@ -149,23 +161,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing list of phrases: 100%|██████████| 66/66 [05:03<00:00,  4.60s/it]\n",
-      "Processing list of phrases: 100%|██████████| 66/66 [00:00<00:00, 2967.57it/s]\n",
-      "Processing augmented text to images: 66it [00:32,  2.03it/s]"
+      "2023-07-19 12:17:02.898380: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 11523 MB memory:  -> device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:1a:00.0, compute capability: 7.0\n",
+      "Processing list of phrases: 100%|██████████| 66/66 [05:13<00:00,  4.74s/it]\n",
+      "Processing list of phrases: 100%|██████████| 66/66 [00:00<00:00, 2990.01it/s]\n",
+      "Processing augmented text to images: 66it [00:17,  3.74it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating Images took: 6.367276740074158 minutes\n"
+      "Generating Images took: 6.436960780620575 minutes\n"
      ]
     },
     {
@@ -198,7 +211,7 @@
     "        cabs_ = cabs_text.list_of_chapter_abs(cabs)\n",
     "\n",
     "        df = pd.DataFrame(cabs_, columns = ['text'])\n",
-    "        df.to_csv('./Label-ChapterAbstract/cabs.csv', encoding = 'utf-8', index= None)\n",
+    "        df.to_csv('./Label-ChapterAbstract/cabs-v3.csv', encoding = 'utf-8', index= None)\n",
     "\n",
     "        cabs_text_aug = cabs_text.chapter_abs_aug(cabs_)\n",
     "\n",
@@ -212,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +240,7 @@
     "import os\n",
     "\n",
     "# folder path\n",
-    "dir_path = './Label-ChapterAbstract/504'\n",
+    "dir_path = './Label-ChapterAbstract/519'\n",
     "count = 0\n",
     "# Iterate directory\n",
     "for path in os.listdir(dir_path):\n",
@@ -239,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,20 +261,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "parser = Preprocessor()\n",
-    "image_path = sorted(glob.glob('/home/mchou001/Label-ChapterAbstract/504/*.png'), key = parser.numericalSort)\n",
+    "image_path = sorted(glob.glob('/home/mchou001/Label-ChapterAbstract/519/*.png'), key = parser.numericalSort)\n",
     "\n",
     "df = pd.DataFrame(image_path, columns = ['img_path'])\n",
-    "df.to_csv('./Label-ChapterAbstract/chabs_img_aug.csv', encoding = 'utf-8', index= None)"
+    "df.to_csv('./Label-ChapterAbstract/chabs_img_aug-v3.csv', encoding = 'utf-8', index= None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -291,23 +304,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug0.png</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug0.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug1.png</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug1.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug2.png</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug2.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug3.png</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug3.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug4.png</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug4.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -315,23 +328,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug61...</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug61...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>62</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug62...</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug62...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>63</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug63...</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug63...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>64</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug64...</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug64...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>65</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug65...</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug65...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -340,35 +353,35 @@
       ],
       "text/plain": [
        "                                             img_path\n",
-       "0   /home/mchou001/Label-ChapterAbstract/504/aug0.png\n",
-       "1   /home/mchou001/Label-ChapterAbstract/504/aug1.png\n",
-       "2   /home/mchou001/Label-ChapterAbstract/504/aug2.png\n",
-       "3   /home/mchou001/Label-ChapterAbstract/504/aug3.png\n",
-       "4   /home/mchou001/Label-ChapterAbstract/504/aug4.png\n",
+       "0   /home/mchou001/Label-ChapterAbstract/519/aug0.png\n",
+       "1   /home/mchou001/Label-ChapterAbstract/519/aug1.png\n",
+       "2   /home/mchou001/Label-ChapterAbstract/519/aug2.png\n",
+       "3   /home/mchou001/Label-ChapterAbstract/519/aug3.png\n",
+       "4   /home/mchou001/Label-ChapterAbstract/519/aug4.png\n",
        "..                                                ...\n",
-       "61  /home/mchou001/Label-ChapterAbstract/504/aug61...\n",
-       "62  /home/mchou001/Label-ChapterAbstract/504/aug62...\n",
-       "63  /home/mchou001/Label-ChapterAbstract/504/aug63...\n",
-       "64  /home/mchou001/Label-ChapterAbstract/504/aug64...\n",
-       "65  /home/mchou001/Label-ChapterAbstract/504/aug65...\n",
+       "61  /home/mchou001/Label-ChapterAbstract/519/aug61...\n",
+       "62  /home/mchou001/Label-ChapterAbstract/519/aug62...\n",
+       "63  /home/mchou001/Label-ChapterAbstract/519/aug63...\n",
+       "64  /home/mchou001/Label-ChapterAbstract/519/aug64...\n",
+       "65  /home/mchou001/Label-ChapterAbstract/519/aug65...\n",
        "\n",
        "[66 rows x 1 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1 = pd.read_csv('./Label-ChapterAbstract/chabs_img_aug.csv')\n",
-    "df2 = pd.read_csv('./Label-ChapterAbstract/cabs.csv')\n",
+    "df1 = pd.read_csv('./Label-ChapterAbstract/chabs_img_aug-v3.csv')\n",
+    "df2 = pd.read_csv('./Label-ChapterAbstract/cabs-v3.csv')\n",
     "df1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +487,7 @@
        "[66 rows x 2 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,24 +497,24 @@
     "df4 = pd.DataFrame(df3, columns = ['text'])\n",
     "df4['class'] = np.nan\n",
     "df4 = df4.fillna(\"Label-ChapterAbstract\")\n",
-    "df4.to_csv('./Label-ChapterAbstract/updated_chabs.csv', encoding = 'utf-8', index= None)\n",
+    "df4.to_csv('./Label-ChapterAbstract/updated_chabs-v3.csv', encoding = 'utf-8', index= None)\n",
     "df4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df5 = pd.read_csv('./Label-ChapterAbstract/updated_chabs.csv')\n",
+    "df5 = pd.read_csv('./Label-ChapterAbstract/updated_chabs-v3.csv')\n",
     "df6 = pd.concat([df1, df4], axis = 1)\n",
-    "df6.to_csv('./Label-ChapterAbstract/chapter_abs.csv', encoding = 'utf-8', index= None)"
+    "df6.to_csv('./Label-ChapterAbstract/chapter_abs-v3.csv', encoding = 'utf-8', index= None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -533,31 +546,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug0.png</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug0.png</td>\n",
        "      <td>Chapter 1\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\...</td>\n",
        "      <td>Label-ChapterAbstract</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug1.png</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug1.png</td>\n",
        "      <td>Chapter 2\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\...</td>\n",
        "      <td>Label-ChapterAbstract</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug2.png</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug2.png</td>\n",
        "      <td>Chapter 3\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\...</td>\n",
        "      <td>Label-ChapterAbstract</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug3.png</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug3.png</td>\n",
        "      <td>Chapter 4\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\...</td>\n",
        "      <td>Label-ChapterAbstract</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug4.png</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug4.png</td>\n",
        "      <td>Chapter 5\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\...</td>\n",
        "      <td>Label-ChapterAbstract</td>\n",
        "    </tr>\n",
@@ -569,31 +582,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug61...</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug61...</td>\n",
        "      <td>Chapter 62\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t...</td>\n",
        "      <td>Label-ChapterAbstract</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>62</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug62...</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug62...</td>\n",
        "      <td>Chapter 63\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t...</td>\n",
        "      <td>Label-ChapterAbstract</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>63</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug63...</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug63...</td>\n",
        "      <td>Chapter 64\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t...</td>\n",
        "      <td>Label-ChapterAbstract</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>64</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug64...</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug64...</td>\n",
        "      <td>Chapter 65\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t...</td>\n",
        "      <td>Label-ChapterAbstract</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>65</th>\n",
-       "      <td>/home/mchou001/Label-ChapterAbstract/504/aug65...</td>\n",
+       "      <td>/home/mchou001/Label-ChapterAbstract/519/aug65...</td>\n",
        "      <td>Chapter 66\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t...</td>\n",
        "      <td>Label-ChapterAbstract</td>\n",
        "    </tr>\n",
@@ -604,17 +617,17 @@
       ],
       "text/plain": [
        "                                             img_path  \\\n",
-       "0   /home/mchou001/Label-ChapterAbstract/504/aug0.png   \n",
-       "1   /home/mchou001/Label-ChapterAbstract/504/aug1.png   \n",
-       "2   /home/mchou001/Label-ChapterAbstract/504/aug2.png   \n",
-       "3   /home/mchou001/Label-ChapterAbstract/504/aug3.png   \n",
-       "4   /home/mchou001/Label-ChapterAbstract/504/aug4.png   \n",
+       "0   /home/mchou001/Label-ChapterAbstract/519/aug0.png   \n",
+       "1   /home/mchou001/Label-ChapterAbstract/519/aug1.png   \n",
+       "2   /home/mchou001/Label-ChapterAbstract/519/aug2.png   \n",
+       "3   /home/mchou001/Label-ChapterAbstract/519/aug3.png   \n",
+       "4   /home/mchou001/Label-ChapterAbstract/519/aug4.png   \n",
        "..                                                ...   \n",
-       "61  /home/mchou001/Label-ChapterAbstract/504/aug61...   \n",
-       "62  /home/mchou001/Label-ChapterAbstract/504/aug62...   \n",
-       "63  /home/mchou001/Label-ChapterAbstract/504/aug63...   \n",
-       "64  /home/mchou001/Label-ChapterAbstract/504/aug64...   \n",
-       "65  /home/mchou001/Label-ChapterAbstract/504/aug65...   \n",
+       "61  /home/mchou001/Label-ChapterAbstract/519/aug61...   \n",
+       "62  /home/mchou001/Label-ChapterAbstract/519/aug62...   \n",
+       "63  /home/mchou001/Label-ChapterAbstract/519/aug63...   \n",
+       "64  /home/mchou001/Label-ChapterAbstract/519/aug64...   \n",
+       "65  /home/mchou001/Label-ChapterAbstract/519/aug65...   \n",
        "\n",
        "                                                 text                  class  \n",
        "0   Chapter 1\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\...  Label-ChapterAbstract  \n",
@@ -632,7 +645,7 @@
        "[66 rows x 3 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
