--- a/etd_segmentation/src/augmentation/cv_img_aug.ipynb
+++ b/etd_segmentation/src/augmentation/cv_img_aug.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This script is going through all the list of tables images and perform image transformation and save the result as .png format."
+    "### This script is going through all the cv images and perform image transformation and save the result as .png format."
    ]
   },
   {
@@ -16,9 +16,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-10 18:14:33.877469: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
+      "2023-08-07 16:30:08.552903: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-08-10 18:14:36.025496: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "2023-08-07 16:30:08.885783: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     }
    ],
@@ -39,37 +39,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LIST_TABLE_IMG_AUG:\n",
+    "class CV_IMG_AUG:\n",
     "    \n",
     "    def img_transform(self, img_files):\n",
     "        self.img_files = img_files\n",
     "        \n",
     "        img_augmentation = iaa.Sequential([\n",
-    "            iaa.AdditiveGaussianNoise(scale=(10, 30)),\n",
-    "            #iaa.SaltAndPepper(p=0.07),\n",
-    "            iaa.GaussianBlur(sigma=0.09),\n",
-    "            #iaa.LinearContrast(alpha=1),\n",
+    "            #iaa.AdditiveGaussianNoise(scale=(10, 50)),\n",
+    "            #iaa.SaltAndPepper(p=0.1),\n",
+    "            #iaa.GaussianBlur(sigma=0.5),\n",
+    "            iaa.LinearContrast(alpha=1),\n",
     "        ], random_order = True)\n",
     "        \n",
     "        for n, images in tqdm(enumerate(self.img_files[0:]), desc = 'Processing augmented images'):\n",
     "            aug_image = img_augmentation(image=cv2.imread(images))\n",
-    "            cv2.imwrite('./Label-ListofTables/522/aug{}.png'.format(n),aug_image)"
+    "            cv2.imwrite('./Label-CurriculumVitae/521/aug{}.png'.format(n),aug_image)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing augmented images: 477it [04:30,  1.77it/s]\n"
+      "Processing augmented images: 124it [00:11, 10.59it/s]\n"
      ]
     }
    ],
@@ -78,27 +78,27 @@
     "    \n",
     "    start = time.time()\n",
     "    with tf.device('/gpu:0'):\n",
-    "        LoT = LIST_TABLE_IMG_AUG()\n",
+    "        cv = CV_IMG_AUG()\n",
     "        \n",
     "        etd_data = pd.read_csv('/home/mchou001/ResNET/500ETD.csv')\n",
     "        etd_data.set_index(\"class\", inplace = True)\n",
     "        \n",
-    "        label_LoT = etd_data.loc[\"Label-ListofTables\"]\n",
-    "        img_path = label_LoT['img_path']\n",
+    "        label_cv = etd_data.loc[\"Label-CurriculumVitae\"]\n",
+    "        img_path = label_cv['img_path']\n",
     "    \n",
-    "        augmented_img = LoT.img_transform(img_path)"
+    "        augmented_img = cv.img_transform(img_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File count: 477\n"
+      "File count: 124\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
     "import os\n",
     "\n",
     "# folder path\n",
-    "dir_path = './Label-ListofTables/522/'\n",
+    "dir_path = './Label-CurriculumVitae/521/'\n",
     "count = 0\n",
     "# Iterate directory\n",
     "for path in os.listdir(dir_path):\n",
@@ -118,48 +118,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = label_LoT['text']\n",
+    "text = label_cv['text']\n",
     "df = pd.DataFrame(text, columns = ['text'])\n",
-    "df.to_csv('./Label-ListofTables/LoT_text_v3.csv', encoding = 'utf-8', index= None)"
+    "df.to_csv('./Label-CurriculumVitae/cv_text_v4.csv', encoding = 'utf-8', index= None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "parser = Preprocessor()\n",
-    "image_path = sorted(glob.glob('/home/mchou001/Label-ListofTables/522/*.png'), key = parser.numericalSort)\n",
+    "image_path = sorted(glob.glob('/home/mchou001/Label-CurriculumVitae/521/*.png'), key = parser.numericalSort)\n",
     "\n",
     "df = pd.DataFrame(image_path, columns = ['img_path'])\n",
-    "df.to_csv('./Label-ListofTables/LoT_v3.csv', encoding = 'utf-8', index= None)"
+    "df.to_csv('./Label-CurriculumVitae/cv_v4.csv', encoding = 'utf-8', index= None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv('./Label-ListofTables/LoT_v3.csv')\n",
-    "df2 = pd.read_csv('./Label-ListofTables/LoT_text_v3.csv')"
+    "df1 = pd.read_csv('./Label-CurriculumVitae/cv_v4.csv')\n",
+    "df2 = pd.read_csv('./Label-CurriculumVitae/cv_text_v4.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "df3 = pd.concat([df1, df2], axis = 1)\n",
     "df3['class'] = np.nan\n",
-    "df3 = df3.fillna(\"Label-ListofTables\")\n",
-    "df3.to_csv('./Label-ListofTables/LoT_img_aug_v3.csv', index = None)"
+    "df3 = df3.fillna(\"Label-CurriculumVitae\")\n",
+    "df3.to_csv('./Label-CurriculumVitae/cv_img_aug_v4.csv', index = None)"
    ]
   },
   {
