--- a/etd_segmentation/src/augmentation/list-of-figures_img_aug.ipynb
+++ b/etd_segmentation/src/augmentation/list-of-figures_img_aug.ipynb
@@ -11,7 +11,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-08-10 18:37:37.135687: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-08-10 18:37:37.535499: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+     ]
+    }
+   ],
    "source": [
     "## importing the modules from ETDAugmentation script\n",
     "from ipynb.fs.full.ETDaugmentation import *\n",
@@ -21,12 +31,15 @@
     "import numpy as np\n",
     "import cv2\n",
     "import glob\n",
-    "import re"
+    "import re\n",
+    "import time\n",
+    "from tqdm import tqdm\n",
+    "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,56 +49,64 @@
     "        self.img_files = img_files\n",
     "        \n",
     "        img_augmentation = iaa.Sequential([\n",
-    "            iaa.Affine(rotate=(-6, 6)),\n",
     "            iaa.AdditiveGaussianNoise(scale=(10, 30)),\n",
-    "            iaa.SaltAndPepper(p=0.07),\n",
+    "            #iaa.SaltAndPepper(p=0.07),\n",
     "            iaa.GaussianBlur(sigma=0.09),\n",
-    "            iaa.LinearContrast(alpha=1),\n",
-    "            iaa.PerspectiveTransform(scale=0.025, keep_size=True)\n",
+    "            #iaa.LinearContrast(alpha=1),\n",
     "        ], random_order = True)\n",
     "        \n",
-    "        lower = 0\n",
-    "        upper = 500\n",
-    "        while lower < upper:\n",
-    "            for n, images in enumerate(self.img_files[0:]):\n",
-    "                aug_image = img_augmentation(image=cv2.imread(images))\n",
-    "                cv2.imwrite('./Label-ListofFigures/507/aug{}.png'.format(lower),aug_image)\n",
-    "                lower += 1"
+    "        for n, images in tqdm(enumerate(self.img_files[0:]), desc = 'Processing augmented images'):\n",
+    "            aug_image = img_augmentation(image=cv2.imread(images))\n",
+    "            cv2.imwrite('./Label-ListofFigures/524/aug{}.png'.format(n),aug_image)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing augmented images: 586it [05:38,  1.73it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    \n",
-    "    parser = Preprocessor()    \n",
-    "    cv = LIST_FIG_IMG_AUG()\n",
+    "    start = time.time()\n",
+    "    with tf.device('/gpu:0'):\n",
+    "        #parser = Preprocessor()\n",
+    "        LoF = LIST_FIG_IMG_AUG()\n",
+    "        \n",
+    "        etd_data = pd.read_csv('/home/mchou001/ResNET/500ETD.csv')\n",
+    "        etd_data.set_index(\"class\", inplace = True)\n",
+    "        \n",
+    "        label_LoF = etd_data.loc[\"Label-ListofFigures\"]\n",
+    "        img_path = label_LoF['img_path']\n",
     "    \n",
-    "    img_path = glob.glob('./Label-ListofFigures/*.png')\n",
+    "        augmented_img = LoF.img_transform(img_path)\n",
     "    \n",
-    "    augmented_img = cv.img_transform(img_path)\n",
-    "    \n",
-    "    image_path = sorted(glob.glob('/home/mchou001/Label-ListofFigures/507/*.png'), key = parser.numericalSort)\n",
+    "#        image_path = sorted(glob.glob('/home/mchou001/Label-ListofFigures/508/*.png'), key = parser.numericalSort)\n",
     "\n",
-    "    df = pd.DataFrame(image_path, columns = ['filename'])\n",
-    "    df['class'] = np.nan\n",
-    "    df = df.fillna(\"Label-ListofFigures\")\n",
-    "    df.to_csv('list-of-figures_img_aug.csv', encoding = 'utf-8', index= None)"
+    "#     df = pd.DataFrame(image_path, columns = ['filename'])\n",
+    "#     df['class'] = np.nan\n",
+    "#     df = df.fillna(\"Label-ListofFigures\")\n",
+    "#     df.to_csv('list-of-figures_img_aug.csv', encoding = 'utf-8', index= None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File count: 596\n"
+      "File count: 586\n"
      ]
     }
    ],
@@ -93,7 +114,7 @@
     "import os\n",
     "\n",
     "# folder path\n",
-    "dir_path = './Label-ListofFigures/507/'\n",
+    "dir_path = './Label-ListofFigures/524/'\n",
     "count = 0\n",
     "# Iterate directory\n",
     "for path in os.listdir(dir_path):\n",
@@ -105,19 +126,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!zip -r cv_img.zip ./Label-CurriculumVitae/506/"
+    "text = label_LoF['text']\n",
+    "df = pd.DataFrame(text, columns = ['text'])\n",
+    "df.to_csv('./Label-ListofFigures/LoF_text_v2.csv', encoding = 'utf-8', index= None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "parser = Preprocessor()\n",
+    "image_path = sorted(glob.glob('/home/mchou001/Label-ListofFigures/524/*.png'), key = parser.numericalSort)\n",
+    "\n",
+    "df = pd.DataFrame(image_path, columns = ['img_path'])\n",
+    "df.to_csv('./Label-ListofFigures/LoF_v2.csv', encoding = 'utf-8', index= None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.read_csv('./Label-ListofFigures/LoF_v2.csv')\n",
+    "df2 = pd.read_csv('./Label-ListofFigures/LoF_text_v2.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = pd.concat([df1, df2], axis = 1)\n",
+    "df3['class'] = np.nan\n",
+    "df3 = df3.fillna(\"Label-ListofFigures\")\n",
+    "df3.to_csv('./Label-ListofFigures/LoF_img_aug_v2.csv', index = None)"
+   ]
   },
   {
    "cell_type": "code",
@@ -129,7 +180,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -143,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
