--- a/etd_segmentation/src/augmentation/gabs_text_img_aug.ipynb
+++ b/etd_segmentation/src/augmentation/gabs_text_img_aug.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,9 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8 µs, sys: 1e+03 ns, total: 9 µs\n",
+      "Wall time: 21.5 µs\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    \n",
@@ -152,6 +161,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File count: 1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# folder path\n",
+    "dir_path = './Label-GeneralAbstract/505'\n",
+    "count = 0\n",
+    "# Iterate directory\n",
+    "for path in os.listdir(dir_path):\n",
+    "    # check if current path is a file\n",
+    "    if os.path.isfile(os.path.join(dir_path, path)):\n",
+    "        count += 1\n",
+    "print('File count:', count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!zip -r gabs_txt_img.zip ./Label-GeneralAbstract/505/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser = Preprocessor()\n",
+    "image_path = sorted(glob.glob('/home/mchou001/Label-GeneralAbstract/505/*.png'), key = parser.numericalSort)\n",
+    "\n",
+    "df = pd.DataFrame(image_path, columns = ['filename'])\n",
+    "df['class'] = np.nan\n",
+    "df = df.fillna(\"Label-GeneralAbstract\")\n",
+    "df.to_csv('gabs_img_aug.csv', encoding = 'utf-8', index= None)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -160,7 +220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -174,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
